--- a/general-coder/agents.toml
+++ b/general-coder/agents.toml
@@ -3,6 +3,7 @@ name = "@leourbina/general-coder"
 version = "1.0.3"
 description = "A comprehensive AI coding assistant package that provides deep codebase understanding, TDD workflow enforcement, and intelligent debugging support"
 homepage = "https://github.com/terrazul-ai/tz-packages"
+repository = "https://github.com/terrazul-ai/tz-packages"
 license = "MIT"
 keywords = ["coding", "tdd", "debugging", "architecture", "code-review"]
 authors = ["Terrazul Team"]
