--- a/tdd-engineer/agents.toml
+++ b/tdd-engineer/agents.toml
@@ -1,6 +1,6 @@
 [package]
 name = "@terrazul/tdd-engineer"
-version = "1.0.3"
+version = "1.1.0"
 description = "A comprehensive AI coding assistant package that provides deep codebase understanding, TDD workflow enforcement, and intelligent debugging support"
 homepage = "https://github.com/terrazul-ai/tz-packages"
 repository = "https://github.com/terrazul-ai/tz-packages"
@@ -10,12 +10,25 @@ authors = ["Terrazul Team"]
 
 [compatibility]
 claude = ">=0.2.0"
+codex = ">=1.0.0"
+gemini = ">=2.0.0"
 
 [exports.claude]
 template = "templates/CLAUDE.md.hbs"
 promptsDir = "templates/prompts"
 subagentsDir = "templates/claude/agents"
 commandsDir = "templates/claude/commands"
+mcpServers = "templates/claude/mcp_servers.json.hbs"
+
+[exports.codex]
+template = "templates/AGENTS.md.hbs"
+promptsDir = "templates/codex/prompts"
+mcpServers = "templates/codex/mcp_servers.toml.hbs"
+
+[exports.gemini]
+template = "templates/GEMINI.md.hbs"
+commandsDir = "templates/gemini/commands"
+mcpServers = "templates/gemini/mcp_servers.json.hbs"
 
 [metadata]
 tz_spec_version = 1
